ConsoleApp1/Parser/Antlr/LatexParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Latex.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class LatexParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, UNION=2, INTERSECTION=3, N_SET=4, Z_SET=5, Q_SET=6, R_SET=7, EMPTY_SET=8, 
		OR=9, AND=10, NOT=11, TRUE=12, FALSE=13, REL_SIGN=14, IN=15, WS=16, DIGIT=17, 
		CHAR=18, CARET=19, COMMA=20, UNDERSCORE=21, FRAC_CMD=22, SQRT_CMD=23, 
		DERIVATIVE=24, ADD=25, SUB=26, MUL=27, CDOT=28, TIMES=29, DIV=30, L_PAREN=31, 
		R_PAREN=32, L_BRACE=33, R_BRACE=34, L_BRACE_SET=35, R_BRACE_SET=36, L_BRACKET=37, 
		R_BRACKET=38, BAR=39, L_FLOOR=40, R_FLOOR=41, L_CEIL=42, R_CEIL=43, FAC=44, 
		FUNC_NAME=45, FUNC_NAME_LATEX=46, INFTY=47, LATEX_CMD=48;
	public const int
		RULE_set = 0, RULE_unions = 1, RULE_intersections = 2, RULE_differences = 3, 
		RULE_set_atom = 4, RULE_finite_set = 5, RULE_number_set = 6, RULE_conditionnal_set = 7, 
		RULE_parenthesis_set = 8, RULE_condition = 9, RULE_boolean = 10, RULE_or = 11, 
		RULE_and = 12, RULE_not = 13, RULE_cond_atom = 14, RULE_bool_value = 15, 
		RULE_relationnal = 16, RULE_in_set = 17, RULE_parenthesis_cond = 18, RULE_expr = 19, 
		RULE_addition = 20, RULE_multiplication = 21, RULE_unary = 22, RULE_unarysufix = 23, 
		RULE_suffix = 24, RULE_power = 25, RULE_power_nofunc = 26, RULE_atom = 27, 
		RULE_atom_nofunc = 28, RULE_function = 29, RULE_func_args = 30, RULE_abs = 31, 
		RULE_intfunc = 32, RULE_frac = 33, RULE_sqrt = 34, RULE_subexpr = 35, 
		RULE_supexpr = 36, RULE_parenthesis = 37, RULE_number = 38, RULE_variable = 39, 
		RULE_letter = 40, RULE_mul = 41;
	public static readonly string[] ruleNames = {
		"set", "unions", "intersections", "differences", "set_atom", "finite_set", 
		"number_set", "conditionnal_set", "parenthesis_set", "condition", "boolean", 
		"or", "and", "not", "cond_atom", "bool_value", "relationnal", "in_set", 
		"parenthesis_cond", "expr", "addition", "multiplication", "unary", "unarysufix", 
		"suffix", "power", "power_nofunc", "atom", "atom_nofunc", "function", 
		"func_args", "abs", "intfunc", "frac", "sqrt", "subexpr", "supexpr", "parenthesis", 
		"number", "variable", "letter", "mul"
	};

	private static readonly string[] _LiteralNames = {
		null, "'.'", "'\\cup'", "'\\cap'", "'\\N'", "'\\Z'", "'\\Q'", "'\\R'", 
		"'\\empty'", null, null, "'\\neg'", null, null, null, "'\\in'", null, 
		null, null, "'^'", "','", "'_'", "'\\frac'", "'\\sqrt'", "'''", "'+'", 
		"'-'", "'*'", "'\\cdot'", "'\\times'", "'/'", null, null, "'{'", "'}'", 
		"'\\left{'", "'\\right}'", "'['", "']'", "'|'", "'\\lfloor'", "'\\rfloor'", 
		"'\\lceil'", "'\\rceil'", "'!'", null, null, "'\\infty'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, "UNION", "INTERSECTION", "N_SET", "Z_SET", "Q_SET", "R_SET", 
		"EMPTY_SET", "OR", "AND", "NOT", "TRUE", "FALSE", "REL_SIGN", "IN", "WS", 
		"DIGIT", "CHAR", "CARET", "COMMA", "UNDERSCORE", "FRAC_CMD", "SQRT_CMD", 
		"DERIVATIVE", "ADD", "SUB", "MUL", "CDOT", "TIMES", "DIV", "L_PAREN", 
		"R_PAREN", "L_BRACE", "R_BRACE", "L_BRACE_SET", "R_BRACE_SET", "L_BRACKET", 
		"R_BRACKET", "BAR", "L_FLOOR", "R_FLOOR", "L_CEIL", "R_CEIL", "FAC", "FUNC_NAME", 
		"FUNC_NAME_LATEX", "INFTY", "LATEX_CMD"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Latex.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static LatexParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public LatexParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public LatexParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class SetContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public UnionsContext unions() {
			return GetRuleContext<UnionsContext>(0);
		}
		public SetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_set; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatexVisitor<TResult> typedVisitor = visitor as ILatexVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSet(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SetContext set() {
		SetContext _localctx = new SetContext(Context, State);
		EnterRule(_localctx, 0, RULE_set);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84;
			unions();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UnionsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IntersectionsContext[] intersections() {
			return GetRuleContexts<IntersectionsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IntersectionsContext intersections(int i) {
			return GetRuleContext<IntersectionsContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] UNION() { return GetTokens(LatexParser.UNION); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UNION(int i) {
			return GetToken(LatexParser.UNION, i);
		}
		public UnionsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unions; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatexVisitor<TResult> typedVisitor = visitor as ILatexVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnions(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UnionsContext unions() {
		UnionsContext _localctx = new UnionsContext(Context, State);
		EnterRule(_localctx, 2, RULE_unions);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			intersections();
			State = 91;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==UNION) {
				{
				{
				State = 87;
				Match(UNION);
				State = 88;
				intersections();
				}
				}
				State = 93;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IntersectionsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DifferencesContext[] differences() {
			return GetRuleContexts<DifferencesContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DifferencesContext differences(int i) {
			return GetRuleContext<DifferencesContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] INTERSECTION() { return GetTokens(LatexParser.INTERSECTION); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTERSECTION(int i) {
			return GetToken(LatexParser.INTERSECTION, i);
		}
		public IntersectionsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_intersections; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatexVisitor<TResult> typedVisitor = visitor as ILatexVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIntersections(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IntersectionsContext intersections() {
		IntersectionsContext _localctx = new IntersectionsContext(Context, State);
		EnterRule(_localctx, 4, RULE_intersections);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94;
			differences();
			State = 99;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==INTERSECTION) {
				{
				{
				State = 95;
				Match(INTERSECTION);
				State = 96;
				differences();
				}
				}
				State = 101;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DifferencesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Set_atomContext set_atom() {
			return GetRuleContext<Set_atomContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DifferencesContext differences() {
			return GetRuleContext<DifferencesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SUB() { return GetToken(LatexParser.SUB, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIV() { return GetToken(LatexParser.DIV, 0); }
		public DifferencesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_differences; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatexVisitor<TResult> typedVisitor = visitor as ILatexVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDifferences(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DifferencesContext differences() {
		DifferencesContext _localctx = new DifferencesContext(Context, State);
		EnterRule(_localctx, 6, RULE_differences);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 102;
			set_atom();
			State = 105;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SUB || _la==DIV) {
				{
				State = 103;
				_la = TokenStream.LA(1);
				if ( !(_la==SUB || _la==DIV) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 104;
				differences();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Set_atomContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Finite_setContext finite_set() {
			return GetRuleContext<Finite_setContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Number_setContext number_set() {
			return GetRuleContext<Number_setContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Conditionnal_setContext conditionnal_set() {
			return GetRuleContext<Conditionnal_setContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Parenthesis_setContext parenthesis_set() {
			return GetRuleContext<Parenthesis_setContext>(0);
		}
		public Set_atomContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_set_atom; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatexVisitor<TResult> typedVisitor = visitor as ILatexVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSet_atom(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Set_atomContext set_atom() {
		Set_atomContext _localctx = new Set_atomContext(Context, State);
		EnterRule(_localctx, 8, RULE_set_atom);
		try {
			State = 112;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 107;
				finite_set();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 108;
				number_set();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 109;
				conditionnal_set();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 110;
				parenthesis_set();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Finite_setContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode L_BRACE_SET() { return GetToken(LatexParser.L_BRACE_SET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode R_BRACE_SET() { return GetToken(LatexParser.R_BRACE_SET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(LatexParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(LatexParser.COMMA, i);
		}
		public Finite_setContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_finite_set; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatexVisitor<TResult> typedVisitor = visitor as ILatexVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFinite_set(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Finite_setContext finite_set() {
		Finite_setContext _localctx = new Finite_setContext(Context, State);
		EnterRule(_localctx, 10, RULE_finite_set);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114;
			Match(L_BRACE_SET);
			State = 116;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 463592407564288L) != 0)) {
				{
				State = 115;
				expr();
				}
			}

			State = 122;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 118;
				Match(COMMA);
				State = 119;
				expr();
				}
				}
				State = 124;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 125;
			Match(R_BRACE_SET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Number_setContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode R_SET() { return GetToken(LatexParser.R_SET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode N_SET() { return GetToken(LatexParser.N_SET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Z_SET() { return GetToken(LatexParser.Z_SET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Q_SET() { return GetToken(LatexParser.Q_SET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EMPTY_SET() { return GetToken(LatexParser.EMPTY_SET, 0); }
		public Number_setContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_number_set; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatexVisitor<TResult> typedVisitor = visitor as ILatexVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumber_set(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Number_setContext number_set() {
		Number_setContext _localctx = new Number_setContext(Context, State);
		EnterRule(_localctx, 12, RULE_number_set);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 127;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 496L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Conditionnal_setContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode L_BRACE_SET() { return GetToken(LatexParser.L_BRACE_SET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BAR() { return GetToken(LatexParser.BAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConditionContext condition() {
			return GetRuleContext<ConditionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode R_BRACE_SET() { return GetToken(LatexParser.R_BRACE_SET, 0); }
		public Conditionnal_setContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_conditionnal_set; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatexVisitor<TResult> typedVisitor = visitor as ILatexVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConditionnal_set(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Conditionnal_setContext conditionnal_set() {
		Conditionnal_setContext _localctx = new Conditionnal_setContext(Context, State);
		EnterRule(_localctx, 14, RULE_conditionnal_set);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 129;
			Match(L_BRACE_SET);
			State = 130;
			expr();
			State = 131;
			Match(BAR);
			State = 132;
			condition();
			State = 133;
			Match(R_BRACE_SET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Parenthesis_setContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode L_PAREN() { return GetToken(LatexParser.L_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SetContext set() {
			return GetRuleContext<SetContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode R_PAREN() { return GetToken(LatexParser.R_PAREN, 0); }
		public Parenthesis_setContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parenthesis_set; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatexVisitor<TResult> typedVisitor = visitor as ILatexVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParenthesis_set(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Parenthesis_setContext parenthesis_set() {
		Parenthesis_setContext _localctx = new Parenthesis_setContext(Context, State);
		EnterRule(_localctx, 16, RULE_parenthesis_set);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 135;
			Match(L_PAREN);
			State = 136;
			set();
			State = 137;
			Match(R_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConditionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public OrContext or() {
			return GetRuleContext<OrContext>(0);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_condition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatexVisitor<TResult> typedVisitor = visitor as ILatexVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCondition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConditionContext condition() {
		ConditionContext _localctx = new ConditionContext(Context, State);
		EnterRule(_localctx, 18, RULE_condition);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 139;
			or();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BooleanContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public OrContext or() {
			return GetRuleContext<OrContext>(0);
		}
		public BooleanContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_boolean; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatexVisitor<TResult> typedVisitor = visitor as ILatexVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBoolean(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BooleanContext boolean() {
		BooleanContext _localctx = new BooleanContext(Context, State);
		EnterRule(_localctx, 20, RULE_boolean);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 141;
			or();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OrContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AndContext[] and() {
			return GetRuleContexts<AndContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public AndContext and(int i) {
			return GetRuleContext<AndContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] OR() { return GetTokens(LatexParser.OR); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OR(int i) {
			return GetToken(LatexParser.OR, i);
		}
		public OrContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_or; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatexVisitor<TResult> typedVisitor = visitor as ILatexVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OrContext or() {
		OrContext _localctx = new OrContext(Context, State);
		EnterRule(_localctx, 22, RULE_or);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 143;
			and();
			State = 148;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==OR) {
				{
				{
				State = 144;
				Match(OR);
				State = 145;
				and();
				}
				}
				State = 150;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
